--- a/src/components/svv/_core/svv.css
+++ b/src/components/svv/_core/svv.css
@@ -1,3 +1,5 @@
 @import "./tokens.css";
 @import "./base.css";
 @import "./fonts.css";
+@import "../svv-button/svv-button.css";
+@import "../svv-chip/svv-chip.css";
